k8s/talentapp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { .Chart.Name } }
  namespace: { { .Values.namespace } }
spec:
  type: ClusterIP
  selector:
    app: { { .Chart.Name } }
  ports:
    - port: 80
      targetPort: 8080
      name: http
